# Liberty-Chess

./: .gitignore  COPYING.md  Cargo.toml  Pieces.md  README.md  Standards.md  validate
.github/workflows/: compile.yml  rust.yml  test.yml
Standards/: L-FEN.md  ULCI.md
liberty_chess/: Cargo.toml
liberty_chess/src/: clock.rs  keys.rs  liberty_chess.rs  movegen.rs  moves.rs  parsing.rs  perft.rs  positions.rs  random_board.rs  threading.rs
liberty_chess_gui/: Cargo.toml  Trunk.toml  index.html
liberty_chess_gui/js/: sw.js
liberty_chess_gui/src/: clock.rs  colours.rs  config.rs  credits.rs  gamemodes.rs  help_page.rs  helpers.rs  images.rs  main.rs  players.rs  render.rs  sound.rs  themes.rs
oxidation/: Cargo.toml
oxidation/src/: bin.rs  evaluate.rs  glue.rs  history.rs  lib.rs  movepicker.rs  parameters.rs  pesto.rs  random.rs  search.rs  tt.rs
perft/: Cargo.toml
perft/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  match.rs
sound/: Cargo.toml
sound/src/: lib.rs  music.rs
test/: Cargo.toml
test/src/: main.rs
tester/: Cargo.toml
tester/src/: lib.rs  main.rs  match.rs  spsa.rs  tuner.rs
ulci/: Cargo.toml
ulci/src/: client.rs  lib.rs  server.rs  tests.rs
