[workspace]
members = ["liberty_chess_gui", "perft"]

[workspace.package]
authors = ["Mathmagician8191 <50558333+Mathmagician8191@users.noreply.github.com>"]
version = "0.14.1"
repository = "https://github.com/Mathmagician8191/Liberty-Chess"
license = "GPL-3.0"
edition = "2021"

[workspace.dependencies]
liberty_chess = {path = "liberty_chess"}
sound = {path = "sound"}
array2d = "0.2.1"
eframe = {version = "0.20.1", features = ["persistence"]}
enum-iterator = "1.2.0"
kira = {version = "0.7.1", default-features = false, features = ["cpal", "ogg"]}
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
resvg = "0.29.0"
threadpool = "1.8.1"

# Wasm only
getrandom = {version = "0.2.8", features = ["js"]}
wasm-bindgen-futures = "0.4"

[profile.dev]
opt-level = 3
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
