[workspace]
members = ["liberty_chess_gui", "perft", "oxidation", "tester", "server"]
resolver = "2"

[workspace.package]
authors = ["Mathmagician8191 <50558333+Mathmagician8191@users.noreply.github.com>"]
version = "0.17.2"
repository = "https://github.com/Mathmagician8191/Liberty-Chess"
license = "GPL-3.0"
edition = "2021"

[workspace.dependencies]
liberty_chess = {path = "liberty_chess"}
oxidation = {path = "oxidation"}
sound = {path = "sound"}
ulci = {path = "ulci"}
array2d = {git = "https://github.com/Mathmagician8191/array2d", branch="mutable_iteration"}
eframe = {version = "0.23.0", features = ["persistence"]}
enum-iterator = "1.2.0"
kira = {version = "0.8.4", default-features = false, features = ["cpal", "ogg"]}
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
resvg = "0.29.0"
threadpool = "1.8.1"

# Wasm only
getrandom = {version = "0.2.10", features = ["js"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[profile.dev]
opt-level = 3
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
