[package]
name = "liberty_chess"
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "liberty_chess"
path = "src/liberty_chess.rs"

[dependencies]
array2d = {workspace = true}
enum-iterator = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
