[package]
name = "liberty_chess_gui"
version = "0.14.2"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
liberty_chess = {workspace = true}
clipboard = {workspace = true, optional = true}
eframe = {workspace = true}
enum-iterator = {workspace = true}
rand = {workspace = true}
resvg = {workspace = true}
sound = {workspace = true, optional = true}

[features]
default = ["clipboard", "clock", "sound", "music"]
benchmarking = []
clipboard = ["dep:clipboard"]
clock = []
sound = ["dep:sound"]
music = ["sound", "sound/music"]
