[package]
name = "liberty_chess_gui"
version = "0.15.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
liberty_chess = {workspace = true}
eframe = {workspace = true}
enum-iterator = {workspace = true}
rand = {workspace = true}
resvg = {workspace = true}
sound = {workspace = true, optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {workspace = true}
wasm-bindgen-futures = {workspace = true}

[features]
default = ["clock", "sound", "music"]
benchmarking = []
clock = []
sound = ["dep:sound"]
music = ["sound", "sound/music"]
