[package]
name = "liberty_chess_gui"
version = "0.17.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
liberty_chess = {workspace = true}
eframe = {workspace = true}
enum-iterator = {workspace = true}
oxidation = {workspace = true}
rand = {workspace = true}
resvg = {workspace = true}
sound = {workspace = true, optional = true}
ulci = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {workspace = true}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}

[features]
default = ["clock", "sound", "music"]
benchmarking = []
clock = []
sound = ["dep:sound"]
music = ["sound", "sound/multithreading"]
