[package]
name = "oxidation"
version = "0.3.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "oxidation"
path = "src/lib.rs"

[[bin]]
name = "oxidation"
path = "src/bin.rs"

[[bin]]
name = "random"
path = "src/random.rs"

[dependencies]
liberty_chess = {workspace = true}
rand = {workspace = true}
ulci = {workspace = true}
