[package]
name = "perft"
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
liberty_chess = {workspace = true}
threadpool = {workspace = true, optional = true}

[features]
default = ["parallel"]
parallel = ["dep:threadpool"]
validate = ["liberty_chess/validate"]
