[package]
name = "sound"
version = "0.6.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
kira = {workspace = true}
parking_lot = {workspace = true}
rand = {workspace = true}

[features]
default = []
music = []
multithreading = ["music"]
