[package]
name = "tester"
version = "0.2.1"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
liberty_chess = {workspace = true}
rand = {workspace = true}
threadpool = {workspace = true}
oxidation = {workspace = true}
ulci = {workspace = true}
