[package]
name = "tester"
version = "0.4.1"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "match"
path = "src/match.rs"

[[bin]]
name = "spsa"
path = "src/spsa.rs"

[[bin]]
name = "tuner"
path = "src/tuner.rs"

[dependencies]
array2d = {workspace = true}
liberty_chess = {workspace = true}
rand = {workspace = true}
rayon = {workspace = true}
threadpool = {workspace = true}
oxidation = {workspace = true}
ulci = {workspace = true}
